# udevil

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.mkd  TRANSLATE  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  index.html  install  news.html  params.json  udevil--help.html  udevil.SHA256.txt  udevil.conf.txt
.tx/: config
0.2.0/: udevil-0.2.0-installer.sh  udevil-0.2.0.SHA256.asc
0.2.1/: udevil-0.2.1-installer.sh  udevil-0.2.1.tar.xz
0.2.2/: udevil-0.2.2.SHA256.asc  udevil-0.2.2.tar.xz  udevil_0.2.2-1_all.deb
0.2.3/: udevil-0.2.3-installer.sh
0.2.4/: udevil-0.2.4-installer.sh  udevil-0.2.4.SHA256.asc  udevil_0.2.4-1_all.deb
0.2.5/: udevil-0.2.5.SHA256.asc  udevil-0.2.5.tar.xz
0.2.7/: udevil-0.2.7-installer.sh  udevil-0.2.7.SHA256.asc  udevil_0.2.7-1_all.deb
0.2.8/: udevil-0.2.8-installer.sh  udevil-0.2.8.tar.xz  udevil_0.2.8-1_all.deb
0.2.9/: udevil-0.2.9-installer.sh
0.3.0/: udevil-0.3.0-installer.sh
0.3.1/: udevil_0.3.1-1_all.deb
0.3.2/: udevil-0.3.2.SHA256.asc  udevil-0.3.2.tar.xz
0.3.4/: udevil-0.3.4-installer.sh  udevil_0.3.4-1_all.deb
0.3.5/: udevil-0.3.5.SHA256.asc  udevil-0.3.5.tar.xz  udevil_0.3.5-1_all.deb
0.3.6/: udevil-0.3.6-installer.sh  udevil-0.3.6.SHA256.asc  udevil_0.3.6-1_all.deb
0.4.0/: udevil-0.4.0.SHA256.asc  udevil_0.4.0-1_all.deb
0.4.1/: udevil_0.4.1-1_all.deb
0.4.2/: udevil-0.4.2-installer.sh  udevil-0.4.2.SHA256.asc  udevil-0.4.2.tar.xz  udevil_0.4.2-1_all.deb
0.4.3/: udevil-0.4.3-installer.sh  udevil-0.4.3.SHA256.asc  udevil-0.4.3.tar.xz  udevil_0.4.3-1_all.deb
0.4.4/: udevil-0.4.4-installer.sh  udevil-0.4.4.SHA256.asc  udevil-0.4.4.tar.xz  udevil_0.4.4-1_all.deb
debian/: changelog  control  postinst  postrm  rules  watch
distros/debian/: README-DEBIAN  changelog  control  copyright  postrm
etc/: Makefile.am  Makefile.in  udevil.conf
etc/systemd/: README  devmon@.service
man/: Makefile.am  Makefile.in  generate_manpages.bash  udevil.1  udevil.1.txt
man/po4a/: en_GB.po  po4a.cfg  udevil-man.pot
man/translated/en_GB/: udevil.1  udevil.1.txt
po/: ChangeLog  LINGUAS  Makefile.in  POTFILES.in  de.po  en.po  es.po  fr.po  it.po  pl.po  pt_BR.po  ru.po  sv.po  udevil.pot  update-pot
src/: Makefile.am  Makefile.in  canonicalize.h  device-info.c  device-info.h  devmon  realpath.c  realpath.h  udevil.c  wildmatch.c
